--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "homepage": "https://github.com/tporst/sf-discover-unused-fields/blob/main/README.md",
   "dependencies": {
+    "colors": "^1.4.0",
     "yargs": "^17.0.1"
   }
 }
